<resources>
    <string name="brand_name">&lt;Insert Brand Here></string>
    <string name="brand_name_type">Apps</string>
    <string name="app_name">Random Reminders</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">Main Screen</string>
    <string name="new_reminder">New Reminder</string>
    <string name="settings">Settings</string>
    <string name="reminder_name">Reminder Name:</string>
    <string name="enter_reminder_name">Enter reminder name</string>
    <string name="frequency">Frequency:</string>
    <string name="enter_the_frequency_days">Enter the frequency (days)</string>
    <string name="variance">Variance:</string>
    <string name="enter_the_variance_hours">Enter the variance (hours)</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="description">Description:</string>
    <string name="enter_description_optional">Enter description (optional)</string>
    <string name="confirm">Confirm</string>
    <string name="test_mode">Test Mode</string>
    <string name="allow_notifications">Allow Notifications</string>
</resources>
